# Musicbrainz-pg-light

./: CHANGELOG.md  Cargo.toml  README.md  cog.toml  config.example.toml  docker-compose.yaml
.github/workflows/: CI.yaml  Deploy.yaml  Release.yaml
.sqlx/: query-29080ece86e998e283931be93839c8d1eda80758deedf0c6ee4fa13d75eec302.json
crates/musicbrainz-light/: Cargo.toml
crates/musicbrainz-light-config/: Cargo.toml
crates/musicbrainz-light-config/src/: lib.rs
crates/musicbrainz-light-db/: Cargo.toml
crates/musicbrainz-light-db/src/: lib.rs
crates/musicbrainz-light-download/: Cargo.toml
crates/musicbrainz-light-download/src/: github_sync.rs  lib.rs  main.rs
src/: error.rs  github_sync.rs  init.rs  lib.rs  main.rs  pg.rs  progress.rs  restore.rs  settings.rs  tar_helper.rs
src/download/: github.rs  musicbrainz.rs
src/musicbrainz_db/: init.rs  mod.rs  sql_helpers.rs
src/musicbrainz_db/replication/: mod.rs  pending_data.rs  replication_control.rs
