[package]
name = "mbpg-light"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7.13"
bb8-postgres = "0.9.0"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
config = "0.15.15"
reqwest = { version = "0.12.23", features = ["stream"] }
tempfile = "3"
bzip2 = "0.4"
tar = "0.4"
bytes = "1"
octocrab = "0.45.0"
indicatif = { version = "0.18", features = ["tokio"] }
