[package]
name = "musicbrainz-light"
version = "0.1.3"
edition = "2024"
authors = ["oknozor <paul.delafosse@protonmail.com>"]
description = "A lightweight MusicBrainz database importer and processor"
readme = "README.md"
homepage = "https://github.com/oknozor/musicbrainz-light"
repository = "https://github.com/oknozor/musicbrainz-light"
license = "GPL-3.0-or-later"
keywords = ["musicbrainz", "database", "music", "metadata", "postgresql"]
categories = ["database", "command-line-utilities", "multimedia::audio"]

[dependencies]
tokio = { version = "1", features = ["fs", "macros", "rt", "rt-multi-thread"] }
futures-util = "0.3"
tracing = "0.1.41"
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono"] }
csv = "1.3.1"
serde_json = "1.0.143"
thiserror = "1"
bzip2 = "0.4"
tar = "0.4"
tempfile = "3"
bytes = "1"
itertools = "0.14"
indicatif = { version = "0.18", features = ["tokio"], optional = true }
octocrab = { version = "0.45.0", features = ["rustls"] }
reqwest = { version = "0.12.23", default-features = false, features = ["stream" ,"rustls-tls"] }
config = "0.15.15"
serde = { version = "1", features = ["derive"] }
chrono = "0.4"

clap = { version = "4", features = ["derive"], optional = true }
color-eyre =  { version = "0.6.5", optional = true }
tracing-indicatif = { version = "0.3.13", optional = true }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"], optional = true }

[[bin]]
name = "mbpg-light"
path = "src/bin/mbpg-light.rs"

[features]
default = ["cli", "progress"]
cli = ["clap", "color-eyre", "tracing-subscriber", "tracing-indicatif"]
progress = ["indicatif"]
