[package]
name = "musicbrainz-light-download"
version = "0.1.0"
edition = "2024"

[dependencies]
musicbrainz-light-config.workspace = true
reqwest.workspace = true
anyhow.workspace = true
futures-util.workspace = true
tempfile.workspace = true
tokio.workspace = true
tokio-util.workspace = true
async-compression.workspace = true
tar.workspace = true
tokio-postgres.workspace = true
bytes.workspace = true
octocrab.workspace = true
bzip2.workspace = true
